--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
     "babel-runtime": "^6.26.0",
     "import": "0.0.6",
     "typed": "^0.3.3",
-    "typed.js": "^2.0.6"
+    "typed.js": "^2.0.6",
+    "webpack": "^4.29.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "jshint": "^2.9.5",
+    "css-loader": "^2.1.0",
+    "jshint": "^2.9.7",
     "jshint-loader": "^0.8.4",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-libs-browser": "^2.1.0",
-    "webpack": "^3.11.0"
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack-cli": "^3.2.1"
   }
 }
